# warp-transducer

./: CMakeLists.txt  README.md
cmake/: torch.cmake
python/: warp_rnnt.cc  warp_rnnt.cu
python/warp_rnnt/: __init__.py  rnnt_loss.py
tests/: random.cu
